Fix for "Templates have (potentially) unneeded escape tags" error

--- a/display_report.html
+++ b/display_report.html
@@ -145,7 +145,7 @@ a:visited {
 
 <br>
 {% if result.message %}
-<p>{% autoescape off %}{{ result.message }}{% endautoescape %}</p>
+<p>{{ result.message }}</p>
 {% endif %}
 
 <h3 class="wf-h3-style">Analysis</h3>
