--- a/readme.html
+++ b/readme.html
@@ -1,3 +1,16 @@
+<!-- File: readme.html
+  Copyright (c) 2016-2022 Splunk Inc.
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+  Unless required by applicable law or agreed to in writing, software distributed under
+  the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
+  either express or implied. See the License for the specific language governing permissions
+  and limitations under the License.
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -31,7 +44,27 @@ The "API Key" contains the the authentication token obtained from an A1000 insta
 The "Detonate timeout" variable defines how long the app should wait for the results from the A1000 appliance.
 </p>
 
-
+<h2>Port Information</h2>
+<p>
+	The app uses HTTP/ HTTPS protocol for communicating with the RL A1000 Malware Analysis Appliance server. Below are the default ports used by the Splunk SOAR Connector.
+	<table>
+		<tr class=plain>
+			<th>SERVICE NAME</th>
+			<th>TRANSPORT PROTOCOL</th>
+			<th>PORT</th>
+		</tr>
+		<tr>
+			<td>http</td>
+			<td>tcp</td>
+			<td>80</td>
+		</tr>
+		<tr>
+			<td>https</td>
+			<td>tcp</td>
+			<td>443</td>
+		</tr>
+	</table>
+</p>
 
 
 </body>
