RLA1000: Rename the files

--- a/rla1000_template.html
+++ b/rla1000_template.html
@@ -3,7 +3,7 @@
 {% block custom_title_prop %}{% if title_logo %}style="background-size: auto 60%; background-position: 50%; background-repeat: no-repeat; background-image: url('/app_resource/{{ title_logo }}');"{% endif %}{% endblock %}
 {% block widget_content %}
 
-<!-- File: reversinglabs_template.html
+<!-- File: rla1000_template.html
   Copyright (c) 2016-2022 Splunk Inc.
 
   Licensed under the Apache License, Version 2.0 (the "License");
