--- a/rla1000_template.html
+++ b/rla1000_template.html
@@ -4,7 +4,7 @@
 {% block widget_content %}
 
 <!-- File: rla1000_template.html
-  Copyright (c) 2016-2022 Splunk Inc.
+  Copyright (c) ReversingLabs Inc 2016-2022
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
