--- a/release_notes/release_notes.html
+++ b/release_notes/release_notes.html
@@ -1,5 +1,15 @@
-<b>rl ReversingLabs A1000 Release Notes - Published by Phantom April 27, 2018</b>
+<b>RL A1000 Malware Analysis Appliance Release Notes - Published by ReversingLabs February 25, 2022</b>
 <br><br>
+<b>Version 2.3.0 - Released February 25, 2022</b>
+<ul>
+<li>Compatibility changes for Python 3 support</li>
+<li>Added one new action:</li>
+<ul>
+<li>Local Advanced Search</li>
+</ul>
+<li>Added 'hunting_report_vault_id' parameter in 'detonate file' and 'get report' action</li>
+<li>Fixed miscellaneous JSON and documentation issues</li>
+</ul>
 <b>Version 1.3.1 - Released April 27, 2018</b>
 <ul>
 <li>Updated to support dark theme</li>
